src/components/DataMessenger/DataMessenger.scss
.chata-drawer {
  font-family: var(--chata-messenger-font-family), sans-serif;
  line-height: 22px;
}

.chata-drawer.disable-selection {
  user-select: none;
}

.chata-drawer .chata-drawer-content-container {
  width: 100%;
  height: 100%;
  display: flex;
  background: var(--chata-messenger-background-color);
  overflow: hidden;
  border-radius: 4px;
  flex-direction: column;
  justify-content: stretch;
}

.chata-drawer .chat-header-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 60px;
  background: var(--chata-messenger-accent-color);
  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.1);
  flex-grow: 0;
  flex-shrink: 0;
  z-index: 1;
}
.chata-drawer .chata-header-right-container {
  display: flex;
  justify-content: right;
  width: 100px;
}
.chata-drawer .chata-header-center-container {
  position: relative;
  color: #fff;
  line-height: 60px;
  font-size: 18px;
  letter-spacing: 0.05em;
  font-weight: 600;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.chata-drawer .header-title {
  animation: fadeIn 0.3s;
}
.chata-drawer .chata-header-left-container {
  width: 100px;
}
.chata-drawer .chata-button.close svg {
  width: 30px;
  height: 30px;
  padding-top: 3px;
}
.chata-drawer .chata-button.clear-all {
  position: absolute;
  right: 10px;
  animation: fadeIn 0.3s;
}
.chata-drawer .chata-button.clear-all svg {
  width: 28px;
  height: 28px;
  padding-top: 7px;
  box-sizing: border-box;
}

.chata-drawer .chat-message-container {
  scroll-behavior: smooth !important;
  max-height: calc(100% - 140px);
  overflow-y: auto;
  overflow-x: hidden;
  /* padding: 20px; */
  flex: 1;
}

.chata-drawer .chat-bar-container {
  position: relative;
  padding: 10px;
  padding-top: 30px;
}

.chata-drawer .chat-drawer-chat-bar {
  flex-shrink: 0;
  flex-grow: 0;
  height: 60px;
  animation: fadeIn 0.3s;
}

.chata-drawer .watermark {
  position: absolute;
  color: var(--chata-messenger-text-color-primary);
  text-align: center;
  opacity: 0.2;
  top: 6px;
  width: calc(100% - 10px);
  font-size: 13px;
}

.chata-drawer .chata-drawer:focus {
  outline: none;
}

.chata-drawer .chat-header-container button {
  background: transparent;
  border: none;
  color: white;
  margin: 10px;
  margin-right: 0;
  font-size: 20px;
  cursor: pointer;
  outline: none !important;
}
.chata-drawer .chat-header-container button:hover {
  opacity: 0.7;
}
.chata-drawer .chat-header-container button svg {
  width: 35px;
  height: 35px;
}

.topics-container {
  margin: 5px 0;
}
.intro-qi-link {
  cursor: pointer;
  color: var(--chata-messenger-accent-color);
}

/* custom scrollbar */
.chata-drawer .chat-message-container > div:last-child {
  opacity: 0;
  transition: opacity 200ms ease;
}
.chata-drawer .chat-message-container:hover > div:last-child {
  opacity: 1;
}

/* rc-drawer */
.chata-drawer .drawer-content {
  background: white;
  border-radius: 4px;
  overflow: visible;
}
.chata-drawer .drawer-handle {
  background: var(--chata-messenger-background-color);
  color: #28a8e0; // For default chata logo
  transition: opacity 0.5s ease;
  overflow: hidden;
  width: 50px;
  height: 50px;
  border-radius: 50px !important;
  font-size: 22px;

  .chata-bubbles-outlined svg {
    width: 26px;
    height: 26px;
  }
}
.chata-drawer.drawer-right .drawer-handle {
  left: -70px !important;
}
.chata-drawer.drawer-left .drawer-handle {
  right: -60px !important;
}
.chata-drawer.drawer-top .drawer-handle {
  bottom: -60px !important;
}
.chata-drawer.drawer-bottom .drawer-handle {
  top: -60px !important;
}
.chata-drawer .drawer-handle.hide {
  opacity: 0;
  visibility: hidden;
}
.chata-drawer .drawer-handle-icon,
.chata-drawer .drawer-handle-icon::before,
.chata-drawer .drawer-handle-icon::after {
  background: var(--chata-messenger-text-color-primary);
}
.chata-drawer .drawer-bottom .drawer-content-wrapper,
.chata-drawer .drawer-top .drawer-content-wrapper {
  left: 0;
}
.chata-drawer .drawer-content-wrapper {
  background: transparent;
}
.chata-drawer.drawer-right .drawer-content-wrapper,
.chata-drawer.drawer-left .drawer-content-wrapper {
  max-width: calc(100vw - 45px) !important;
  min-width: 400px !important;
}
.chata-drawer.drawer-top .drawer-content-wrapper,
.chata-drawer.drawer-bottom .drawer-content-wrapper {
  max-height: calc(100vh - 45px) !important;
  min-height: 400px !important;
}
.chata-drawer-resize-handle {
  position: absolute;
  background: transparent;

  &.right {
    top: 0;
    left: -5px;
    width: 5px;
    height: 100vh;
    cursor: ew-resize;
  }

  &.left {
    top: 0;
    right: -5px;
    width: 5px;
    height: 100vh;
    cursor: ew-resize;
  }

  &.top {
    bottom: -5px;
    left: 0;
    height: 5px;
    width: 100vw;
    cursor: ns-resize;
  }

  &.bottom {
    top: -5px;
    left: 0;
    height: 5px;
    width: 100vw;
    cursor: ns-resize;
  }
}

.chata-drawer .response-loading-container {
  position: absolute;
  bottom: 45px;
  left: 20px;
}

/* Tooltips */
.chata-drawer-tooltip {
  font-family: var(--chata-messenger-font-family), sans-serif;
  letter-spacing: 0.04em;
  padding: 7px 15px;
  transition: none;
  opacity: 1 !important;
  z-index: 99999 !important; /* necessary to show up on top of rc drawer */
}
.interpretation-tooltip {
  font-family: var(--chata-messenger-font-family), sans-serif;
  font-size: 12px;
  text-align: left;
  letter-spacing: 0.04em;
  padding: 7px 15px;
  max-width: 400px;
  opacity: 1 !important;
  transition: none;
  z-index: 99999 !important; /* necessary to show up on top of rc drawer */
}

.react-tiny-popover-container {
  z-index: 9999;
  border: 1px solid #ababab52;
  border-radius: 4px;
  box-shadow: 0px 0 8px rgba(0, 0, 0, 0.15);
  transition: opacity 0.2s ease 0s !important;
}

.clear-messages-confirm-popover {
  color: var(--chata-messenger-text-color-primary);
  padding: 20px;
  background: var(--chata-messenger-background-color);
  text-align: right;
  padding: 18px;
  width: 266px;
}
.chata-confirm-text {
  text-align: center;
}
.chata-confirm-icon {
  color: #faad14;
  vertical-align: middle;
  margin-right: 5px;
  margin-bottom: 3px;
}

/* Use drawer theme colors for the UI component accent colors */
.chata-modal-container
  .chata-checkbox__input:not(.chata-checkbox--switch__input),
.chata-drawer .chata-checkbox__input:not(.chata-checkbox--switch__input) {
  border-color: var(--chata-messenger-accent-color);
}

.chata-modal-container
  .chata-checkbox__input::before:not(.chata-checkbox--switch__input),
.chata-drawer
  .chata-checkbox__input::before:not(.chata-checkbox--switch__input) {
  background: var(--chata-messenger-accent-color);
}

.data-messenger-tab-container {
  position: absolute;
  background: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;

  &.right {
    height: 100vh;
    width: 60px;
    left: -60px;
  }
  &.left {
    height: 100vh;
    width: 60px;
    right: -60px;
  }
  &.top {
    width: 100vw;
    height: 60px;
    bottom: -60px;
  }
  &.bottom {
    width: 100vw;
    height: 60px;
    top: -60px;
  }
}

/* Shadow container (this is used to cut off the shadow so it doesnt show in the drawer) */
.page-switcher-shadow-container {
  position: absolute;
  background: transparent;
  overflow: hidden;
}
.page-switcher-shadow-container.right {
  top: 80px;
  width: 60px;
}
.page-switcher-shadow-container.left {
  top: 80px;
  width: 60px;
}

/* Container holding the tabs */
.page-switcher-container {
  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
  overflow: hidden;
  box-sizing: border-box;
  display: flex;
  pointer-events: all;

  .tab {
    position: relative;
    z-index: 1;

    background: var(--chata-messenger-accent-color);
    color: #fff;
    opacity: 1;

    font-size: 22px;
    text-align: center;
    transform: translate(0, 0);
    cursor: pointer;

    transition-property: background, color, transform, line-height, height,
      width, margin-right, margin-top, margin-left, margin-bottom, z-index,
      opacity;
    transition-duration: 0.2s;

    &.tips svg {
      height: 22px;
      width: 23px;
    }
  }

  &.right {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    margin-top: 20px;
    margin-left: 20px;
    margin-bottom: 20px;
    flex-direction: column;

    .tab {
      box-shadow: inset -18px 0px 8px -10px rgba(0, 0, 0, 0.2);
    }
  }

  &.left {
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    margin-top: 20px;
    margin-right: 20px;
    margin-bottom: 20px;
    margin-left: -5px;
    flex-direction: column;

    .tab {
      box-shadow: inset 18px 0px 8px -10px rgba(0, 0, 0, 0.2);
    }
  }

  &.top {
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    margin-right: 20px;
    margin-left: 20px;
    margin-bottom: 20px;
    flex-direction: row;
    height: 40px;

    .tab {
      box-shadow: inset 0px 12px 8px -10px rgba(0, 0, 0, 0.2);
    }
  }

  &.bottom {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    margin-top: 20px;
    margin-left: 20px;
    margin-right: 20px;
    flex-direction: row;
    height: 40px;

    .tab {
      box-shadow: inset 0px -17px 8px -10px rgba(0, 0, 0, 0.2);
    }
  }
}

/* Individual Tabs */
.page-switcher-container .tab {
  display: flex;
  justify-content: center;
  align-items: center;
}
.data-messenger-notification-btn {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  line-height: inherit;
}
.page-switcher-container.right .tab,
.page-switcher-container.left .tab {
  height: 65px;
}

.page-switcher-container.top .tab,
.page-switcher-container.bottom .tab {
  width: 65px;
}

.page-switcher-container.bottom .tab {
  background: var(--chata-messenger-background-color);
  color: var(--chata-messenger-text-color-primary);
}
.page-switcher-container .tab.active {
  background: var(--chata-messenger-background-color);
  color: var(--chata-messenger-text-color-primary);
  box-shadow: -2px 0px 8px 2px rgba(0, 0, 0, 0.2);
  font-weight: bold;
  position: relative;
  z-index: 2;
}
.page-switcher-container.bottom .tab.active {
  background: var(--chata-messenger-accent-color);
  color: #fff;
  font-weight: bold;
}

/* animations */
@keyframes response-loading1 {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes response-loading3 {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}
@keyframes response-loading2 {
  0% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(19px, 0);
  }
}
@keyframes scale-up-center {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes slideDown {
  0% {
    transform: translateY(-100%);
  }
  100% {
    transform: translateY(0%);
  }
}

